# Expense_Tracker_backend

./: README.md
DsService/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
DsService/src/app/: __init__.py
DsService/src/app/service/: Expense.py  llmService.py  messageService.py
DsService/src/app/utils/: messageUtil.py
DsService/src/dataservice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
UserService/UserService/: Dockerfile  build.gradle
UserService/UserService/src/main/resources/: application.properties
UserService/UserService/src/test/java/com/example/UserService/: UserServiceApplicationTests.java
authSystem/: Dockerfile  settings.gradle
authSystem/app/: build.gradle
authSystem/app/src/main/java/org/example/: App.java
authSystem/app/src/main/java/org/example/Response/: JwtResponseDto.java
authSystem/app/src/main/java/org/example/auth/: JwtAuthFilter.java  SecurityConfig.java  UserConfig.java
authSystem/app/src/main/resources/: application.properties
authSystem/app/src/test/java/org/example/: AppTest.java
configuration_files/: docker-compose.yaml
configuration_files/config/: kong.yaml
configuration_files/custom-plugins/custom-auth/: schema.lua
expenseService/: Dockerfile  build.gradle  settings.gradle
expenseService/src/main/java/com/example/expenseService/: ExpenseServiceApplication.java
expenseService/src/main/resources/: application.properties
expenseService/src/test/java/com/example/expenseService/: ExpenseServiceApplicationTests.java
(+31 files in other folders)
